--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "firebase": "^12.5.0",
+    "jspdf": "^3.0.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-quill": "^2.0.0",
     "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
